Ejemplos_presentados/kubernetes_examples/Docker_kubernetes_master_class/kubernetes/basic_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service-nginx
  namespace: test-masterclass
spec:
  selector:
    app: example-deployment-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
